@@ -22,7 +22,6 @@
 
 package org.jboss.as.clustering.infinispan.subsystem.remote;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.function.BiFunction;
@@ -39,16 +38,13 @@ import org.wildfly.clustering.infinispan.marshalling.MarshallerFactory;
 public enum HotRodMarshallerFactory implements BiFunction<ModuleLoader, List<Module>, Marshaller> {
 
     LEGACY() {
-        private final Set<String> protoStreamModules = Collections.singleton("org.wildfly.clustering.web.hotrod");
+        private final Set<String> protoStreamModules = Set.of("org.wildfly.clustering.web.hotrod");
         private final Predicate<String> protoStreamPredicate = this.protoStreamModules::contains;
 
         @Override
         public Marshaller apply(ModuleLoader moduleLoader, List<Module> modules) {
             // Choose marshaller based on the associated modules
-            if (modules.stream().map(Module::getName).anyMatch(this.protoStreamPredicate)) {
-                return PROTOSTREAM.apply(moduleLoader, modules);
-            }
-            return JBOSS.apply(moduleLoader, modules);
+            return (modules.stream().map(Module::getName).anyMatch(this.protoStreamPredicate) ? PROTOSTREAM : JBOSS).apply(moduleLoader, modules);
         }
     },
     JBOSS() {
@@ -58,9 +54,13 @@ public enum HotRodMarshallerFactory implements BiFunction<ModuleLoader, List<Mod
         }
     },
     PROTOSTREAM() {
+        private final Set<String> clientModules = Set.of("org.infinispan.query.client");
+        private final Predicate<String> infinispanPredicate = this.clientModules::contains;
+
         @Override
         public Marshaller apply(ModuleLoader moduleLoader, List<Module> modules) {
-            return MarshallerFactory.PROTOSTREAM.apply(moduleLoader, modules);
+            // Use default ProtoStream marshaller if container uses remote query
+            return (modules.stream().map(Module::getName).anyMatch(this.infinispanPredicate) ? MarshallerFactory.DEFAULT : MarshallerFactory.PROTOSTREAM).apply(moduleLoader, modules);
         }
     },
     ;
